Fix sun animation overflow

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -565,7 +565,9 @@
 
   .sun-wrapper {
     position: absolute;
-    bottom: -1em;
+    margin-block-start: 0;
+    // top: 0;
+    bottom: 0;
     left: -1em;
     width: 100vw;
     height: 100%;
